[workspace]
resolver = "2"
members = [
  "php-parser",
  "php-format",
  "php-lint",
  "php-lsp",
]

default-members = [
  "php-lsp"
]

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
tempfile = "3.20.0"
unicode-segmentation = "1.2"
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
parking_lot = "0.12"
nucleo = "0.5.0"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["erasin <erasinoo@gmail.com>"]
categories = ["php","lsp"]
repository = "https://github.com/erasin/php-tools"
homepage = "https://erasin.wang"
license = "MIT"
